site/styles/_swiper.scss
.swiper-wrapper-container {
  padding: 0;
  position: relative;
  margin: 0 auto;
}

.swiper-container {
  padding: 0 0 40px 0;
  @include media-breakpoint-up(md){
    padding: 15px 50px 20px 50px;
  }
}

.swiper-slide {
  a {
    width: 100%;
    display: block;
  }
}

.swiper-button-next {
  right: 0;
  background: rgba($body-bg,0.6) url(/images/icons/next.png) center center no-repeat;
}

.swiper-button-prev {
  left: 0;
  background: rgba($body-bg,0.6) url(/images/icons/prev.png) center center no-repeat;
}

.swiper-button-prev,
.swiper-button-next {
  top: 0;
  width: 44px;
  height: 100%;
  margin-top: 0;
  background-size: 30%;
  opacity: .8;
  outline: 0 none;

  @include hover-focus {
    opacity: 1;
  }

  @include media-breakpoint-down(sm) {
    display: none;
  }

  &.swiper-button-disabled {
    display: none;
  }
}

.swiper-title {
    @include media-breakpoint-down(sm){
    padding-left: 25px;
  }
}

